Fix the items container overflowing. Improve readability.

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -19,11 +19,11 @@
 
 .product-list {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
   gap: 5px;
+  margin-bottom: 5px;
   .product-list-item-wrapper {
     border: 1px solid rgba(66, 66, 67, 0.2);
     width: calc(50% - 5px);
@@ -53,6 +53,7 @@
       grid-template-rows: 1fr 1fr;
       height: 20%;
       padding: 4px;
+      row-gap: 8px;
       .brand-wrapper {
         display: flex;
         justify-content: left;
@@ -64,7 +65,7 @@
       .name-wrapper {
         grid-row: 2;
         grid-column: 1 / 3;
-        font-size: 1rem;
+        font-size: 0.9rem;
       }
       .price-wrapper {
         display: flex;
@@ -72,7 +73,7 @@
         align-items: center;
         grid-row: 1;
         grid-column: 2;
-        font-size: 1rem;
+        font-size: 0.9rem;
       }
     }
   }
